Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
@@ -169,3 +169,90 @@ The formula for calculating ALE is: ALE = SLE x ARO, where SLE is the Single Los
 </details>
 
 ---
+
+## 1.9.3 Risk response and treatment (e.g., cybersecurity insurance) ##
+
+Following the risk analysis process, security should implement the most cost-effective treatments, with the appropriate approach determined by the value of the asset and the type of risk identified in prior steps.
+
+While it's impossible to completely eliminate risk, it can be managed through various approaches:
+
+- Avoidance: Opting to discontinue activities that expose the asset to risk. While this can prevent risk, it may also entail missing out on significant opportunities (opportunity cost).
+- Transfer: Sharing some risk with another party, typically an insurance company, to mitigate potential losses.
+- Mitigation: Implementing controls to reduce risk to an acceptable level.
+- Acceptance: Choosing to take no action or no further action regarding the risk associated with a particular asset.
+
+```mermaid
+flowchart TD
+  Risk[Risk: unavoidable possibility of harm] --> Decision{Choose a response strategy}
+  
+  Decision --> Avoidance[Avoidance<br>— cease risky activity<br>(opportunity cost)]
+  Decision --> Transfer[Transfer<br>— share risk (e.g. insurance)]
+  Decision --> Mitigation[Mitigation<br>— implement controls to reduce risk]
+  Decision --> Acceptance[Acceptance<br>— accept residual risk<br>— take no further action]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+:brain: Remember the 4 terms above: avoidance, transfer, mitigation, acceptance but be aware that during your exam and your career you’ll find many synonyms.
+
+### Open Questions ###
+1. What is the primary factor in determining the appropriate risk treatment approach?
+<details>
+  <summary>Show answer</summary>
+The value of the asset and the type of risk identified are the primary factors in determining the appropriate approach to risk treatment.
+</details>
+
+2. Explain the concept of "opportunity cost" in the context of risk avoidance.
+<details>
+  <summary>Show answer</summary>
+Opportunity cost, in the context of risk avoidance, refers to the potential benefits or profits that a company might forgo by choosing to avoid activities that carry a certain risk.
+</details>
+
+3. How does risk transfer typically function in a business setting?
+<details>
+  <summary>Show answer</summary>
+Risk transfer typically involves a contractual agreement with another entity, often an insurance company, where the risk of potential loss is shared in exchange for a premium payment.
+</details>
+
+4. Provide an example of risk mitigation in practice.
+<details>
+  <summary>Show answer</summary>
+Installing a firewall to protect sensitive data is an example of risk mitigation. Other examples include implementing access controls, data encryption, and employee training programs.
+</details>
+
+5. In what circumstances might risk acceptance be a valid strategy?
+<details>
+  <summary>Show answer</summary>
+Risk acceptance may be a valid strategy when the cost of mitigating or transferring the risk is disproportionately high compared to the potential impact of the risk itself, or when the risk is considered low and unlikely to occur.
+</details>
+
+6. What is the relationship between asset value and risk treatment decisions?
+<details>
+  <summary>Show answer</summary>
+Higher-value assets generally warrant more robust and costly risk treatment measures, while lower-value assets might justify less stringent approaches. The level of risk associated with an asset also influences the choice of treatment.
+</details>
+
+7. Can risk be entirely eliminated? Explain your answer.
+<details>
+  <summary>Show answer</summary>
+It is generally impossible to completely eliminate risk. Every business activity inherently carries some degree of risk, and unforeseen circumstances can always arise.
+</details>
+
+8. Why is it crucial to analyze risk before implementing treatments?
+<details>
+  <summary>Show answer</summary>
+Analyzing risk before implementing treatments is crucial to understand the nature and severity of the threats, assess the potential impact on assets, and make informed decisions about the most effective and cost-efficient ways to manage those risks.
+</details>
+
+9. Describe the potential drawbacks of relying solely on risk transfer as a treatment strategy.
+<details>
+  <summary>Show answer</summary>
+Relying solely on risk transfer, such as insurance, can be costly in terms of premium payments. Additionally, it might not cover all potential losses or indirect costs associated with a risk event, and it doesn't address the underlying causes of the risk.
+</details>
+
+10. How can an organization determine what constitutes an "acceptable level" of risk?
+<details>
+  <summary>Show answer</summary>
+An organization determines an "acceptable level" of risk through a combination of factors, including its risk appetite, industry standards, regulatory requirements, and the cost-benefit analysis of various risk treatment options.
+</details>
