Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
@@ -185,8 +185,8 @@ While it's impossible to completely eliminate risk, it can be managed through va
 flowchart TD
   Risk[Risk: unavoidable possibility of harm] --> Decision{Choose a response strategy}
   
-  Decision --> Avoidance[Avoidance<br>— cease risky activity<br>(opportunity cost)]
-  Decision --> Transfer[Transfer<br>— share risk (e.g. insurance)]
+  Decision --> Avoidance[Avoidance<br>— cease risky activity<br> - opportunity cost]
+  Decision --> Transfer[Transfer<br>— share risk - e.g. insurance]
   Decision --> Mitigation[Mitigation<br>— implement controls to reduce risk]
   Decision --> Acceptance[Acceptance<br>— accept residual risk<br>— take no further action]
 
@@ -255,4 +255,229 @@ Relying solely on risk transfer, such as insurance, can be costly in terms of pr
 <details>
   <summary>Show answer</summary>
 An organization determines an "acceptable level" of risk through a combination of factors, including its risk appetite, industry standards, regulatory requirements, and the cost-benefit analysis of various risk treatment options.
+</details>
+
+---
+
+## 1.9.4 Applicable types of controls (e.g., preventive, detection, corrective) ##
+
+Security controls are designed to reduce the likelihood that a vulnerability will be exploited by a threat. By implementing security controls, organizations can mitigate the risk of vulnerabilities being exploited and protect their assets from harm.
+The aim of security control, as stated by NIST, is to preserve Confidentiality , Integrity and Availability of information. The term control is interchangeable with the following terms: countermeasure, safeguard, security mechanism, protection mechanism.In the table below we can see a common classification of Security Controls. There are infinite possible classifications, what we’ll see is just the most common classification in the infosec field:
+
+<img width="512" height="288" alt="controls" src="https://github.com/user-attachments/assets/9708e73a-d515-4f70-bbf3-a7edbcce6635" />
+
+Usually, security controls are classified in 2 different ways: security control types and security control functions, and this classification should be enough for your infosec certification or interview.
+
+Control types, reported in the y axis of the table, usually answer the question “how are we protecting our assets” and are divided in:
+
+- **Physical Controls** are tangible measure used to protect (or detect) unauthorized access to physical systems or areas.
+- **Technical Controls** include the measures implemented through technology, such as software, hardware, or network systems to protect assets.
+- **Administrative Controls** are measures (usually documents) implemented through policies, procedures, and other organizational measures defining personnel or business practices in line with the organization security goals.
+
+The second way of classifying security controls is by Control functions, depicted in the x axis of the table, which are preventative, detective, and corrective. Despite their name, they usually are related at the time in which an incident happened, more specifically security control functions help us in classifying countermeasures happening before, during and after an incident or an unauthorized activity. Let’s shortly describe them.
+
+- **Preventative controls** comprehend any security measure designed to stop any unwanted activity from occurring.
+- **Detective Controls** are the solutions to detect and alert to unwanted or unauthorized activity in progress after occurrence.
+- **Corrective Controls** are the measures to repair damage or restore resources to their prior state following an unauthorized activity.
+
+As we previously said there isn’t a standard classification nor taxonomy for security controls, for example to make things a bit more complicated (but do not worry they are not too complicated) (ISC)2 classifies controls in 7 types based on the timing of unauthorized behaviors by motive, opportunity and means (MOM). You find them in this table:
+
+| Control Type     | When Applied         | Purpose                                         | Examples                              |
+|------------------|----------------------|--------------------------------------------------|----------------------------------------|
+| Directive        | Before                | Guide behavior via policies and awareness       | Security policies, signage, posters    |
+| Deterrent        | Before                | Discourage violations with perceived consequences | Guards, mantraps, warning banners      |
+| Preventive       | Before                | Stop threats before they occur                  | Firewalls, IPS, antivirus              |
+| Detective        | During / After        | Detect and report active or past events         | IDS, SIEM reviews, honeypots           |
+| Corrective       | During / After        | Halt impact and restore operations              | Quarantine infected systems, terminate processes |
+| Recovery         | After                 | Restore to normal operation                      | Backups, system shadowing, DR plans    |
+| Compensating     | Before / During / After | Provide alternate protection when standard controls are missing or insufficient | PINs replacing weak passwords, layered controls |
+
+:brain: Trying to memorize any Security Control categorization, or also memorizing where a security Control is located in the table below is an exercise not useful at all.
+
+:necktie: There are some concepts that we should always take in mind when dealing with Security Controls, they are:
+
+- The same control may fill within different classifications: Never overthink about the right classification of a control when studying for your certification or when talking to an InfoSec practitioner.
+- All control types are preventive by nature.
+- Preventive and Detective controls are complementary (always, when possible, first prevent and then detect).
+- Implementing Security Controls must always be cost effective, it means that based on the value of the asset you are protecting the costs of implementing a security control must be less than its benefit.
+- Usually Controls are used in layers, combining multiple security controls to develop defense in depth (so that if a layer fails the next one will help in preventing a breach). To better understand this concept, you can imagine a rainbow, to reach the pot of gold you must pass through many different layers.
+
+A Security Control Framework is a collection of security controls and implementation and audit guidelines usually organized as a template to help organizations in mitigating their risks.
+Usually, Organizations select and customize security control frameworks based on their organizational needings. The selection process is also known as scoping while the customization process may be also called tailoring. Alternatively, Organizations could also build up a proprietary Security Control Framework. In the following we briefly describe 5 common Security Control Frameworks.
+
+1. NIST Cybersecurity Framework (CSF): Developed by the National Institute of Standards and Technology (NIST), is a risk-based framework that helps organizations identify, assess, and prioritize their cybersecurity risks and implement appropriate controls to mitigate those risks. It is designed to be flexible and adaptable, and can be customized to fit the specific needs and priorities of an organization.
+
+2. NIST SP 800–53: more detailed and prescriptive than NIST CSF,provides a comprehensive set of security and privacy controls for federal information systems and organizations. the controls were meant for agencies in order to comply with the Federal Information Processing Standards (FIPS) but many other organizations have voluntarily accepted it to assist them improve the security of their systems. It is organized into 20 control families, each of which addresses a specific area of concern, listed below:
+AC Access Control
+AT Awareness and Training
+AU Audit and Accountability
+CA Assessment, Authorization, and Monitoring
+CM Configuration Management
+CP Contingency Planning
+IA Identification and Authentication
+IR Incident Response
+MA Maintenance
+PE Physical and Environmental Protection
+PL Planning
+PM Program Management
+PS Personnel Security
+PT PII Processing and Transparency
+RA Risk Assessment
+SA System and Services Acquisition
+SC System and Communications Protection
+SI System and Information Integrity
+Every family contains many controls (in total there are more than 1000 controls), this allows practitioners to use SP 800–53 also as a comprehensive checklist. In order to apply these controls NIST SP 800–53 prescribes a four-step process:
+1. Select the appropriate security control baselines.
+2. Tailor the baselines.
+3. Document the security control selection process.
+4. Apply the controls.
+
+3. ISO/IEC 27001 is an international standard that provides a framework for establishing, implementing, maintaining, and continually improving an organization’s information security management system (ISMS). It includes a set of controls and guidelines for protecting sensitive information and assets, and can be used to help organizations comply with regulatory requirements and industry standards. It has 4 control categories and 93 controls. The 4 control categories are:
+- Organizational Controls
+- People Controls
+- Physical Controls
+- Technological Controls
+
+4. COBIT was developed by the Information Systems Audit and Control Association (ISACA), provides a set of best practices for managing and governing information and technology (IT) assets. COBIT is not purely security focused: it deals with all aspects of information technology, security being only one component. COBIT is a set of practices that can be followed to carry out IT governance, which requires proper security practices. It includes a set of control objectives and related control practices that can be used to help organizations align their IT activities with their business objectives and mitigate risks.
+
+5. The Center for Internet Security (CIS) is a nonprofit organization that, among other things, maintains a list of 18 security controls (comparable to the NIST 800–53 families )to mitigate the threat of the majority of common cyberattacks. The controls are divided in 3 families, which are:
+Basic: These key controls should be implemented by every organization to achieve minimum essential security.
+Foundational: These controls embody technical best practices to improve an organization’s security.
+Organizational: These controls focus on people and processes to maintain and improve cybersecurity.
+Under these 20 controls, CIS provides many subcontrols.
+
+Everyone of the 5 frameworks above mentioned has its own certifications, SMEs (subject matter experts) and consultants. What was reported above was just a quick excursus to complete the topic of security controls.
+
+:link: Do Security Controls sometimes make you feel stupid ?: https://medium.com/@lorenzoleonelli/do-security-controls-sometimes-make-you-feel-stupid-507a9987d709
+
+### Open Questions ###
+1. Explain the three core security principles that security controls aim to preserve.
+<details>
+  <summary>Show answer</summary>
+Security controls aim to preserve confidentiality, ensuring information is accessed only by authorized individuals; integrity, ensuring information is accurate and protected from unauthorized alteration; and availability, ensuring authorized users can access information when needed
+</details>
+
+2. Differentiate between technical controls and administrative controls. Provide an example of each.
+<details>
+  <summary>Show answer</summary>
+Technical controls are implemented through technology, such as firewalls or intrusion detection systems. Administrative controls involve policies and procedures, like security awareness training or password policies.
+</details>
+
+3. Why is it crucial to implement security controls in layers, following the principle of defense in depth?
+<details>
+  <summary>Show answer</summary>
+Layered security, or defense in depth, provides redundancy and resilience. If one control fails, others can still mitigate the threat, reducing the risk of a successful breach.
+</details>
+
+4. What is the primary purpose of a Security Control Framework, and how does it assist organizations?
+<details>
+  <summary>Show answer</summary>
+A Security Control Framework provides a structured set of guidelines and best practices to help organizations implement and manage security controls effectively, mitigating risks and protecting assets.
+</details>
+
+5. Compare and contrast the NIST Cybersecurity Framework (CSF) and NIST SP 800-53.
+<details>
+  <summary>Show answer</summary>
+NIST CSF is a high-level, flexible framework that helps organizations manage cybersecurity risk. NIST SP 800-53 is a more detailed and prescriptive set of security controls specifically for federal information systems, but widely adopted by other organizations.
+</details>
+
+6. What are the four control categories in the ISO/IEC 27001 standard? Briefly describe each.
+<details>
+  <summary>Show answer</summary>
+ISO/IEC 27001's four control categories are: Organizational controls, establishing management framework for security; People controls, addressing personnel security awareness and training; Physical controls, protecting physical assets like facilities and equipment; and Technological controls, utilizing software and hardware for security.
+</details>
+
+7. How does COBIT relate to security practices within an organization?
+<details>
+  <summary>Show answer</summary>
+COBIT is a broader IT governance framework that includes security practices as a key component. By following COBIT, organizations can ensure their IT activities align with business objectives while maintaining proper security measures.
+</details>
+
+8. Explain the three families of security controls defined by the Center for Internet Security (CIS).
+<details>
+  <summary>Show answer</summary>
+CIS defines Basic controls, essential for minimal security; Foundational controls, technical best practices for enhanced security; and Organizational controls, focusing on people and processes to maintain and improve security.
+</details>
+
+9. Why is it important to consider cost-effectiveness when implementing security controls?
+<details>
+  <summary>Show answer</summary>
+Security control implementation must be cost-effective to ensure the cost of controls does not exceed the value of the assets being protected. This requires balancing security needs with budgetary constraints.
+</details>
+
+10. Why should you avoid memorizing specific security control categorizations or table locations?
+<details>
+  <summary>Show answer</summary>
+Memorizing specific categorizations is less important than understanding the core concepts and principles behind security controls. The focus should be on applying those principles to real-world scenarios and adapting to the specific needs of an organization.
+</details>
+
+---
+
+## 1.9.5 Control assessments (e.g., security and privacy) ##
+
+A security control assessment (SCA) involves formally evaluating the individual components of a security infrastructure against established standards or expectations. This assessment can be conducted alongside or separately from comprehensive security evaluations like penetration tests or vulnerability assessments. The primary objectives of an SCA include validating the effectiveness of security measures, assessing the organization's risk management processes, and generating a report outlining the strengths and weaknesses of the deployed security infrastructure. Results from an SCA may indicate the continued effectiveness of security controls or highlight areas requiring remediation. Additionally, SCAs should consider the impact of security controls on privacy, ensuring alignment with regulations, contracts, and organizational privacy policies.
+
+:link: Generally, an SCA is a process implemented by federal agencies based on NIST SP 800-53 Rev. 5: https://csrc.nist.gov/pubs/sp/800/53/r5/upd1/final
+
+### Open Questions ###
+
+1. What is the primary purpose of a Security Control Assessment (SCA)?
+<details>
+  <summary>Show answer</summary>
+The primary purpose of an SCA is to formally evaluate the individual components of a security infrastructure against established standards or expectations to determine their effectiveness.
+</details>
+
+2. How does an SCA differ from a penetration test?
+<details>
+  <summary>Show answer</summary>
+While both assess security, an SCA focuses on evaluating the effectiveness of existing security controls against standards, whereas a penetration test simulates real-world attacks to identify vulnerabilities.
+
+</details>
+
+3. List three key objectives of an SCA.
+<details>
+  <summary>Show answer</summary>
+Three key objectives of an SCA are: validating the effectiveness of security measures, assessing the organization's risk management processes, and generating a report outlining strengths and weaknesses of the security infrastructure.
+</details>
+
+4. What are two potential outcomes of conducting an SCA?
+<details>
+  <summary>Show answer</summary>
+An SCA can indicate the continued effectiveness of security controls or highlight areas requiring remediation.
+</details>
+
+5. Explain how privacy considerations factor into an SCA.
+<details>
+  <summary>Show answer</summary>
+SCAs must consider the impact of security controls on privacy, ensuring alignment with regulations, contracts, and organizational privacy policies.
+</details>
+
+6. Why is it important to evaluate security controls against established standards?
+<details>
+  <summary>Show answer</summary>
+Evaluating against standards ensures a consistent and recognized benchmark for security control effectiveness, allowing for comparison and identification of potential weaknesses.
+</details>
+
+7. Provide an example of a situation where an SCA might be necessary.
+<details>
+  <summary>Show answer</summary>
+An SCA might be necessary after a significant system change, a suspected security breach, or as part of regular security audits.
+</details>
+
+8. What type of information is typically included in an SCA report?
+<details>
+  <summary>Show answer</summary>
+An SCA report typically includes details of the assessment methodology, findings on the effectiveness of each control, recommendations for remediation, and an overall risk assessment.
+</details>
+
+9. Who are the typical stakeholders involved in an SCA?
+<details>
+  <summary>Show answer</summary>
+Stakeholders involved in an SCA can include security personnel, IT staff, management, auditors, and potentially external consultants.
+</details>
+
+10. How can an organization utilize the results of an SCA to improve its security posture?
+<details>
+  <summary>Show answer</summary>
+Organizations can use SCA results to prioritize remediation efforts, update security policies, allocate resources effectively, and demonstrate compliance with regulations.
 </details>
