Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
@@ -481,3 +481,88 @@ Stakeholders involved in an SCA can include security personnel, IT staff, manage
   <summary>Show answer</summary>
 Organizations can use SCA results to prioritize remediation efforts, update security policies, allocate resources effectively, and demonstrate compliance with regulations.
 </details>
+
+---
+
+## 1.9.6 Continuous monitoring and measurement ##
+
+Security controls must offer measurable benefits to justify their implementation. If a control cannot be quantified, evaluated, or compared, it may not enhance security effectively. Consider whether a control provides native monitoring or requires external monitoring when selecting countermeasures. Effectiveness measurements for countermeasures often involve assessing degrees of improvement rather than precise numbers of breaches prevented. Monitoring events before and after control implementation is necessary to accurately measure benefits. Evaluating the cost-effectiveness of a control involves comparing the security improvement gained with the expense of deployment.
+
+```mermaid
+flowchart TD
+    A(Risk Exists) --> B{Can control be measured/evaluated?}
+    B -- No --> C[Don’t implement or reconsider control]
+    B -- Yes --> D{Native monitoring?}
+    D -- Yes --> E[Use built‑in metrics/events]
+    D -- No --> F[Deploy external monitoring mechanisms]
+    E & F --> G[Collect metrics pre‑ and post‑control]
+    G --> H[Measure improvement (e.g., incident rate ↓)]
+    H --> I[Calculate cost‑effectiveness]
+    I --> J{Is benefit > cost?}
+    J -- Yes --> K[Keep & refine control]
+    J -- No --> L[Redesign or replace control]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+👔 *Implement and forget* is definetely a bad approach with security countermeasures.
+
+### Open Questions ###
+
+1. Why is it crucial for security controls to offer measurable benefits?
+<details>
+  <summary>Show answer</summary>
+Measurable benefits justify the implementation of security controls. Without quantifiable improvements, it is difficult to determine if the control is actually enhancing security.
+</details>
+
+2. What are the potential drawbacks of implementing a security control that cannot be quantified or evaluated?
+<details>
+  <summary>Show answer</summary>
+Controls that lack quantifiable metrics cannot be effectively evaluated for their impact on security. This makes it difficult to justify their cost and assess their contribution to the overall security posture.
+</details>
+
+3. What aspect of monitoring should be considered when choosing between different security countermeasures?
+<details>
+  <summary>Show answer</summary>
+When choosing countermeasures, consider whether a control offers native monitoring capabilities or requires external monitoring tools. This impacts the cost and complexity of implementation.
+</details>
+
+4. How are the effectiveness measurements for countermeasures typically assessed?
+<details>
+  <summary>Show answer</summary>
+Effectiveness is often assessed by measuring the degree of improvement in security rather than relying on precise numbers of prevented breaches. This acknowledges the difficulty in quantifying all security incidents.
+</details>
+
+5. Why is it important to monitor events both before and after implementing a security control?
+<details>
+  <summary>Show answer</summary>
+Monitoring before implementation provides a baseline for comparison, while monitoring after implementation reveals the control's impact on security events. This comparison allows for a more accurate measurement of benefits.
+</details>
+
+6. What factors are involved in evaluating the cost-effectiveness of a security control?
+<details>
+  <summary>Show answer</summary>
+Cost-effectiveness involves comparing the security improvement gained from the control against the expenses associated with its deployment, including initial costs, maintenance, and operational expenses.
+</details>
+
+7. Explain the concept of "degrees of improvement" in the context of security control effectiveness.
+<details>
+  <summary>Show answer</summary>
+"Degrees of improvement" acknowledges that security benefits aren't always absolute. A control might reduce the frequency or severity of attacks, or improve detection rates, rather than completely eliminating threats.
+</details>
+
+8. What might be a reason a security control with measurable benefits is not implemented?
+<details>
+  <summary>Show answer</summary>
+Even with measurable benefits, a control might not be implemented due to budget constraints, compatibility issues with existing systems, or a lack of skilled personnel to manage the control.
+</details>
+
+9. Why is it important to compare different security countermeasures before selection?
+<details>
+  <summary>Show answer</summary>
+Comparing different countermeasures allows organizations to choose the option that offers the best balance between security improvement, cost-effectiveness, and integration with existing infrastructure.
+</details>
+
+
+
