Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.09 Understand and apply risk management concepts.md
@@ -496,7 +496,7 @@ flowchart TD
     D -- Yes --> E[Use built‑in metrics/events]
     D -- No --> F[Deploy external monitoring mechanisms]
     E & F --> G[Collect metrics pre‑ and post‑control]
-    G --> H[Measure improvement (e.g., incident rate ↓)]
+    G --> H[Measure improvement e.g., incident rate ↓]
     H --> I[Calculate cost‑effectiveness]
     I --> J{Is benefit > cost?}
     J -- Yes --> K[Keep & refine control]
@@ -564,5 +564,72 @@ Even with measurable benefits, a control might not be implemented due to budget 
 Comparing different countermeasures allows organizations to choose the option that offers the best balance between security improvement, cost-effectiveness, and integration with existing infrastructure.
 </details>
 
+---
 
+## 1.9.7 Reporting (e.g., internal, external) ##
+
+Risk reporting is a critical task following a risk analysis, involving the creation and presentation of a comprehensive report to relevant parties. While some organizations limit risk reporting to internal use, others may be required to report findings externally. The report should be accurate, timely, and clear, supporting informed decision-making and regularly updated. Additionally, a risk register or risk log inventories identified risks, tracks risk management activities, and serves as a historical record. It can be shared to enhance evaluation of threats and risks, while a risk matrix or heat map provides a visual representation of risk assessment results.
+
+:necktie: Risk reporting is a fundamental skill for a security professional because it enables effective communication of potential threats, vulnerabilities, and mitigation strategies to stakeholders, facilitating informed decision-making and proactive risk management.
+
+### Open Questions ###
+1. What is the primary purpose of risk reporting?
+<details>
+  <summary>Show answer</summary>
+The primary purpose of risk reporting is to communicate the results of a risk analysis to relevant parties, enabling informed decision-making regarding risk mitigation and management strategies.
+</details>
+
+2. Explain the importance of accuracy, timeliness, and clarity in risk reports.
+<details>
+  <summary>Show answer</summary>
+Accurate, timely, and clear risk reports ensure that stakeholders have a reliable and understandable basis for making decisions related to risks. Accuracy ensures the information is dependable, timeliness allows for prompt action, and clarity promotes understanding and avoids misinterpretations.
+</details>
+
+3. Differentiate between internal and external risk reporting.
+<details>
+  <summary>Show answer</summary>
+Internal risk reporting is intended for stakeholders within the organization, such as management, employees, and internal audit. External risk reporting involves communicating risk information to parties outside the organization, such as regulators, investors, or the public.
+</details>
+
+4. What is a risk register and what information does it typically contain?
+<details>
+  <summary>Show answer</summary>
+A risk register is a document or database that inventories identified risks, tracks risk management activities, and serves as a historical record of risk assessments and mitigation efforts. It typically includes information like risk description, likelihood, impact, assigned owner, mitigation plans, and current status.
+</details>
+
+5. How does a risk register contribute to evaluating threats and risks?
+<details>
+  <summary>Show answer</summary>
+A risk register enhances the evaluation of threats and risks by providing a centralized repository of risk information, enabling stakeholders to monitor existing risks, track their evolution, and assess the effectiveness of implemented risk management strategies.
+</details>
+
+6. What is the function of a risk matrix or heat map in risk management?
+<details>
+  <summary>Show answer</summary>
+A risk matrix or heat map provides a visual representation of risk assessment results, often by plotting the likelihood and impact of each risk on a grid. This allows for quick identification and prioritization of risks based on their potential severity.
+</details>
+
+7. Describe the relationship between a risk analysis and a risk report.
+<details>
+  <summary>Show answer</summary>
+A risk analysis identifies, assesses, and prioritizes potential risks, while a risk report presents the findings of this analysis in a structured format for communication and decision-making.
+</details>
+
+8. Who are the typical recipients of internal risk reports?
+<details>
+  <summary>Show answer</summary>
+Typical recipients of internal risk reports include management teams at various levels, project managers, risk management committees, and relevant department heads.
+</details>
+
+9. Provide an example of a situation where external risk reporting might be required.
+<details>
+  <summary>Show answer</summary>
+External risk reporting might be required in situations where regulations mandate disclosure of specific risks, when seeking investment funding, or when transparency with stakeholders is crucial for maintaining trust and reputation.
+</details>
+
+10. How does regular updating of risk reports contribute to effective risk management?
+<details>
+  <summary>Show answer</summary>
+Regular updating of risk reports ensures that the information remains current and relevant, reflecting changes in the risk landscape, the effectiveness of mitigation measures, and the emergence of new risks. This continuous feedback loop supports proactive risk management and informed decision-making.
+</details>
 
