Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -633,3 +633,5 @@ External risk reporting might be required in situations where regulations mandat
 Regular updating of risk reports ensures that the information remains current and relevant, reflecting changes in the risk landscape, the effectiveness of mitigation measures, and the emergence of new risks. This continuous feedback loop supports proactive risk management and informed decision-making.
 </details>
 
+## 1.9.8 Continuous improvement (e.g., risk maturity modeling) ##
+
